Fix JWT filter and allow auth endpoints